web: push down version badge to avoid overlap

--- a/content/media/css/lldpd.1.blank.less
+++ b/content/media/css/lldpd.1.blank.less
@@ -32,8 +32,8 @@ a {
 }
 .latest-version {
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 3em;
+    left: 2em;
     div {
         background-color: @theme-color;
         border: 0.2em solid lighten(@theme-color, 60%);
